kubernetes/producao/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-core-fiap-deployment
  labels:
    app: vehicle-core-fiap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicle-core-fiap
  template:
    metadata:
      labels:
        app: vehicle-core-fiap
    spec:
      containers:
        - name: vehicle-core-fiap
          image: 202909432785.dkr.ecr.us-east-1.amazonaws.com/ms-vehicle-core-service:${GITHUB_SHA}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
