kubernetes/producao/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-core-fiap-api
spec:
  selector:
    app: vehicle-core-fiap
  type: LoadBalancer  # Para expor o serviço externamente
  ports:
    - protocol: TCP
      port: 80           # Porta acessível externamente
      targetPort: 8080    # Porta usada pelo container
